# master-controller

./: .gitignore  .gitmodules  CLAUDE.md  INDEX.md  QUICKSTART.md  README.md  SPLIT_COMPLETE.md  SYSTEM_STATUS.md  WORKFLOW_EXECUTION_GUIDE.md  WORKFLOW_EXECUTION_PLAN.md  WORKFLOW_READY.md  pyproject.toml  requirements.txt  run_agent.py  run_workflow.py  test_agent.py  validate_setup.py
.claude/: settings.local.json
.obsidian/: app.json  graph.json  workspace.json
agents-mcp/: server.py
config/: agents.yaml
context/: context.db  requirements_answers.md
docs/: zed-mcp-setup.md
finance-cli/: 20260209-current-updates.txt  Cargo.toml
finance-cli/benches/: categorization_bench.rs  parser_bench.rs
finance-cli/src/: lib.rs  main.rs
finance-cli/src/calculator/: cashflow.rs  metrics.rs  mod.rs  pnl.rs
finance-cli/src/categorization/: engine.rs  ml.rs  mod.rs  rules.rs
finance-cli/src/cli/: mod.rs  output.rs
finance-cli/src/cli/commands/: category.rs  config.rs  mod.rs  report.rs  transaction.rs
finance-cli/src/config/: mod.rs  settings.rs
finance-cli/src/database/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs
finance-cli/src/encryption/: cipher.rs  key.rs  mod.rs  secure_memory.rs
finance-cli/src/error/: mod.rs  types.rs
finance-cli/src/logging/: formatters.rs  mod.rs
finance-cli/src/models/: account.rs  category.rs  mod.rs  rule.rs  transaction.rs
finance-cli/src/parsers/: csv.rs  detect.rs  mod.rs  qfx.rs
kanban/: tasks.db
kanban-cli/: Cargo.toml
kanban-cli/kanban/: tasks.db
kanban-cli/src/: lib.rs  main.rs  state_machine.rs
kanban-cli/src/cli/: commands.rs  mod.rs  output.rs
kanban-cli/src/db/: connection.rs  mod.rs  schema.rs
kanban-cli/src/models/: agent.rs  blocker.rs  feature.rs  mod.rs  task.rs  workflow.rs
kanban-cli/src/operations/: blockers.rs  features.rs  metrics.rs  mod.rs  tasks.rs
kanban-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
kanban-cli/src/tui/widgets/: mod.rs  task_card.rs
orchestrator/: __init__.py  agent_runner.py  context_manager.py  kanban_manager.py  llm_client.py  log_manager.py  migrate_state.py  migrate_to_kanban.py  output_validator.py  state_store.py  workflow_engine.py
prompts/: ML_architect.md  categorization_engine_developer.md  cli_developer.md  cli_ux_designer.md  code_reviewer.md  consulting_cpa.md  context_manager.md  data_architect.md  debugger.md  documentation_writer.md  duckdb_developer.md  encryption_developer.md  feature-builder.md  financial_calculator_developer.md  infrastructure_agent.md  kanban_manager.md  ml_engineer.md  output_validator.md  parser_developer.md  product_roadmap_planner.md  project_manager.md  prompt_skill_engineer.md  python_staff_engineer.md  repository_librarian.md  requirements_gatherer.md  rust_scaffolder.md  rust_staff_engineer.md  security_architect.md  system_architect.md  test_developer.md  workflow_orchestrator.md
(+36 files in other folders)
