[package]
name = "finance-cli"
version = "0.1.0"
edition = "2021"
authors = ["Finance CLI Team"]
description = "Privacy-first personal finance management CLI"
license = "MIT"
readme = "README.md"
keywords = ["finance", "cli", "privacy", "budgeting"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color", "help", "usage", "error-context"] }
clap_complete = "4.4"

# Database
duckdb = { version = "1.0", features = ["bundled"] }

# Encryption and security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
secrecy = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# File parsing
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
walkdir = "2.4"
tempfile = "3.8"
directories = "5.0"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

[dev-dependencies]
rstest = "0.18"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serial_test = "3.0"

[features]
default = []

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "categorization_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
