[package]
name = "kanban-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI/TUI kanban board for multi-agent orchestration"
authors = ["Agents Project"]

[lib]
name = "kanban"
path = "src/lib.rs"

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
